feat: styling nav

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
         <!-- style -->
         <link rel="stylesheet" href="style/default.css" />
+        <link rel="stylesheet" href="style/main.css" />
 
         <title>AirKeyboard Pro</title>
     </head>
@@ -22,18 +23,18 @@
         <div class="container">
             <nav class="global-nav">
                 <div class="global-nav-links">
-                    <a href="" class="global-nav-item"></a>
-                    <a href="" class="global-nav-item"></a>
-                    <a href="" class="global-nav-item"></a>
-                    <a href="" class="global-nav-item"></a>
+                    <a href="" class="global-nav-item">Github</a>
+                    <a href="" class="global-nav-item">Ideas</a>
+                    <a href="" class="global-nav-item">Blog</a>
+                    <a href="" class="global-nav-item">Contact</a>
                 </div>
             </nav>
             <nav class="local-nav">
                 <div class="local-nav-links">
-                    <a href="" class="product-name"></a>
-                    <a href="" class="product-name"></a>
-                    <a href="" class="product-name"></a>
-                    <a href="" class="product-name"></a>
+                    <a href="" class="product-name">AirKeyboard Pro</a>
+                    <a href="">개요</a>
+                    <a href="">제품사양</a>
+                    <a href="">구입하기</a>
                 </div>
             </nav>
         </div>
