--- a/index.html
+++ b/index.html
@@ -37,6 +37,114 @@
                     <a href="">구입하기</a>
                 </div>
             </nav>
+
+            <section class="scroll-section" id="scroll-section-0">
+                <h1>AirKeyboard Pro</h1>
+                <div class="sticky-elem main-message">
+                    <p>온전히 빠져들게 하는<br />최고급 세라믹</p>
+                </div>
+                <div class="sticky-elem main-message">
+                    <p>주변 맛을 느끼게 해주는<br />주변 맛 허용 모드</p>
+                </div>
+                <div class="sticky-elem main-message">
+                    <p>온종일 편안한<br />맞춤형 손잡이</p>
+                </div>
+                <div class="sticky-elem main-message">
+                    <p>새롭게 입가를<br />찾아온 매혹</p>
+                </div>
+            </section>
+
+            <section class="scroll-section" id="scroll-section-1">
+                <p class="description">
+                    <strong>보통 스크롤 영역</strong>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Iste consequatur quibusdam vel at. Cupiditate minus amet
+                    fuga? Amet voluptas, harum iusto vel omnis exercitationem
+                    illum quidem impedit autem accusantium, tempora facilis
+                    obcaecati odit laboriosam ducimus libero dicta. Iusto quos
+                    exercitationem, ex doloremque voluptas accusamus. Ducimus,
+                    animi dolorem possimus earum similique repudiandae ratione,
+                    adipisci minus exercitationem perspiciatis sequi odio
+                    quisquam necessitatibus non? Doloribus repellat aspernatur,
+                    perferendis quasi dicta impedit, corrupti soluta, amet esse
+                    eveniet quia voluptates. Reprehenderit nihil enim molestias,
+                    quaerat laudantium, quia tempore dolores aperiam reiciendis,
+                    autem nam? Commodi deleniti facilis perferendis! Saepe,
+                    nobis nulla expedita, iusto iste accusamus dolorum
+                    reiciendis aut, eius ipsa tempora impedit! Ullam quia
+                    obcaecati sed animi illum nemo vero error in officia
+                    recusandae possimus quam libero veniam rerum enim aperiam
+                    temporibus, molestias quos. Quas laborum quidem alias
+                    distinctio maxime, assumenda corporis delectus dolore,
+                    libero ut eius similique maiores impedit aspernatur? Neque
+                    eos suscipit saepe placeat optio recusandae eligendi
+                    assumenda beatae accusamus debitis magni dolores, corporis
+                    voluptates illo voluptas voluptatum laborum eveniet fugiat
+                    dicta ipsam enim atque deserunt error asperiores? Commodi
+                    dignissimos veniam optio quaerat facilis? Inventore id odit
+                    ducimus aperiam esse, voluptatum quod nam! Dicta repudiandae
+                    ad magni aut sapiente eos officiis, debitis earum. Unde?
+                </p>
+            </section>
+
+            <section class="scroll-section" id="scroll-section-2">
+                <div class="stick-elem main-message">
+                    <p><small>편안한 촉감</small> 입과 하나 되다</p>
+                </div>
+                <div class="stick-elem desc-message">
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Possimus totam, fugit cumque aperiam distinctio
+                        corporis, itaque fuga veniam eaque eum ipsa! Deserunt
+                        nam animi harum culpa inventore adipisci accusamus
+                        ducimus quae ab enim? Commodi, voluptatibus aspernatur
+                        inventore, temporibus magnam placeat suscipit cumque
+                        facilis eius molestiae, nisi reiciendis modi aliquam
+                        dolor.
+                    </p>
+                    <div class="pin"></div>
+                </div>
+
+                <div class="stick-elem desc-message">
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Possimus totam, fugit cumque aperiam distinctio
+                        corporis, itaque fuga veniam eaque eum ipsa! Deserunt
+                        nam animi harum culpa inventore adipisci accusamus
+                        ducimus quae ab enim? Commodi, voluptatibus aspernatur
+                        inventore, temporibus magnam placeat suscipit cumque
+                        facilis eius molestiae, nisi reiciendis modi aliquam
+                        dolor.
+                    </p>
+                    <div class="pin"></div>
+                </div>
+            </section>
+
+            <section class="scroll-section" id="scroll-section-3">
+                <p class="mid-message">
+                    <strong>Lorem</strong><br />
+                    ipsum dolor, sit amet consectetur adipisicing elit. Amet,
+                    tempora?
+                </p>
+
+                <p class="canvas-caption">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Officia dolorum qui explicabo. Quia voluptates laudantium
+                    tenetur consequuntur autem cupiditate, sequi accusantium
+                    suscipit. Incidunt similique nemo asperiores, quo alias
+                    voluptate eaque tenetur dolorum tempore? Quaerat dicta
+                    exercitationem vero corporis rem reiciendis eius cum iste
+                    numquam esse cumque voluptatem voluptatum rerum magnam
+                    repellendus sapiente atque voluptate, enim, nemo, nam modi
+                    amet illo incidunt? Saepe aliquam impedit facilis possimus
+                    esse sunt accusamus nam vel facere dolorem quibusdam quaerat
+                    recusandae iusto, perferendis quo est quae nisi odit,
+                    accusantium nemo asperiores minus! Pariatur, reprehenderit
+                    aliquid totam porro culpa nihil similique adipisci beatae
+                    ducimus, magnam possimus!
+                </p>
+            </section>
+            <footer class="footer">2021, Hyesungoh</footer>
         </div>
     </body>
 </html>
