feat: create main js, setting sceneInfo data and layout

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="stick-elem main-message">
                     <p><small>편안한 촉감</small> 입과 하나 되다</p>
                 </div>
-                <div class="stick-elem desc-message">
+                <div class="sticky-elem desc-message">
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing
                         elit. Possimus totam, fugit cumque aperiam distinctio
@@ -105,7 +105,7 @@
                     <div class="pin"></div>
                 </div>
 
-                <div class="stick-elem desc-message">
+                <div class="sticky-elem desc-message">
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing
                         elit. Possimus totam, fugit cumque aperiam distinctio
@@ -145,6 +145,8 @@
                 </p>
             </section>
             <footer class="footer">2021, Hyesungoh</footer>
+
+            <script src="js/main.js"></script>
         </div>
     </body>
 </html>
