--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 
             <section class="scroll-section" id="scroll-section-0">
                 <h1>AirKeyboard Pro</h1>
-                <div class="sticky-elem main-message">
+                <div class="sticky-elem main-message js-mm-a">
                     <p>온전히 빠져들게 하는<br />최고급 세라믹</p>
                 </div>
-                <div class="sticky-elem main-message">
+                <div class="sticky-elem main-message js-mm-b">
                     <p>주변 맛을 느끼게 해주는<br />주변 맛 허용 모드</p>
                 </div>
-                <div class="sticky-elem main-message">
+                <div class="sticky-elem main-message js-mm-c">
                     <p>온종일 편안한<br />맞춤형 손잡이</p>
                 </div>
-                <div class="sticky-elem main-message">
+                <div class="sticky-elem main-message js-mm-d">
                     <p>새롭게 입가를<br />찾아온 매혹</p>
                 </div>
             </section>
@@ -88,7 +88,7 @@
             </section>
 
             <section class="scroll-section" id="scroll-section-2">
-                <div class="stick-elem main-message">
+                <div class="sticky-elem main-message">
                     <p><small>편안한 촉감</small> 입과 하나 되다</p>
                 </div>
                 <div class="sticky-elem desc-message">
