feat: apply other sticky elem animation

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
             </section>
 
             <section class="scroll-section" id="scroll-section-2">
-                <div class="sticky-elem main-message">
+                <div class="sticky-elem main-message a">
                     <p><small>편안한 촉감</small> 입과 하나 되다</p>
                 </div>
-                <div class="sticky-elem desc-message">
+                <div class="sticky-elem desc-message b">
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing
                         elit. Possimus totam, fugit cumque aperiam distinctio
@@ -105,7 +105,7 @@
                     <div class="pin"></div>
                 </div>
 
-                <div class="sticky-elem desc-message">
+                <div class="sticky-elem desc-message c">
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing
                         elit. Possimus totam, fugit cumque aperiam distinctio
