--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
             <section class="scroll-section" id="scroll-section-0">
                 <h1>AirKeyboard Pro</h1>
                 <div class="sticky-elem main-message a">
-                    <p>온전히 빠져들게 하는<br />최고급 세라믹</p>
+                    <p>온전히 빠져들게 하는<br />개쩌는 키보드</p>
                 </div>
                 <div class="sticky-elem main-message b">
-                    <p>주변 맛을 느끼게 해주는<br />주변 맛 허용 모드</p>
+                    <p>주변 소음을 차단해주는<br />강렬한 타건음</p>
                 </div>
                 <div class="sticky-elem main-message c">
-                    <p>온종일 편안한<br />맞춤형 손잡이</p>
+                    <p>온종일 편안한<br />맞춤형 키감</p>
                 </div>
                 <div class="sticky-elem main-message d">
-                    <p>새롭게 입가를<br />찾아온 매혹</p>
+                    <p>새롭게 손가락을<br />찾아온 매혹</p>
                 </div>
             </section>
 
